--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="overlay"></div>
 
   <audio id="vibeMusic" loop>
-    <source src="rihanna.mp3" type="audio/mpeg">
+    <source src="kissme.mp3" type="audio/mpeg">
   </audio>
 
   <div class="container">
